--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,12 @@ body {
     padding: 10px 20px;
     background-color: #4bacd5;
 }
+.slide { 
+    min-heigh:50vh;
+    min-width:100%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 
 /* Footer */
 footer {
