--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,12 @@ body {
   gap: 20px;
   flex-wrap: wrap;
 }
-
-/* Links do menu principal */
 .nav-links {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 15px;
-  transition: all 1s ease; /* transição suave */
+  transition: all 1s ease;
 }
 
 .nav-links a {
@@ -82,7 +80,6 @@ body {
   cursor: pointer;
 }
 
-/* ===== FRASE ABAIXO DO HEADER ===== */
 .hero-message {
   background-color: #e0e0e0;
   text-align: center;
@@ -90,12 +87,13 @@ body {
   font-size: 16px;
   color: #333;
   font-weight: 500;
-  margin-top: 70px; /* altura do header fixo */
+  margin-top: 70px;
 }
 
 /* ===== HERO ===== */
 .hero {
   position: relative;
+  z-index: 5;
 }
 
 .carousel img {
@@ -122,7 +120,7 @@ body {
   background-color: #0056b3;
 }
 
-/* ===== FEATURED (AGORA WOMEN PRODUCTS) ===== */
+/* ===== FEATURED (WOMEN PRODUCTS) ===== */
 .featured {
   padding: 50px 20px;
   background-color: #f5f5f5;
@@ -130,8 +128,8 @@ body {
 }
 .product img {
   width: 100%;
-  height: 200px; /* altura fixa igual para todos os cards */
-  object-fit: cover; /* corta e ajusta a imagem ao card */
+  height: 200px;
+  object-fit: cover;
   border-radius: 6px;
   transition: transform 0.3s ease;}
 
@@ -272,7 +270,7 @@ footer {
   min-height: 110px;
 }
 
-/* Botão */
+/* Button */
 .form-button {
   width: 100%;
   padding: 12px;
@@ -288,7 +286,7 @@ footer {
   background: #0056b3;
 }
 
-/* Tooltip erros */
+/* Tooltip error */
 .error-message {
   display: none;
   position: absolute;
@@ -322,7 +320,6 @@ footer {
   transform: translateY(0);
 }
 
-/* Mensagem de sucesso */
 .success-message {
   display: none;
   margin-top: 12px;
@@ -332,10 +329,13 @@ footer {
   background: #d4edda;
   border: 1px solid #c3e6cb;
 }
-
 /* Mobile */
 @media (max-width: 480px) {
   .contact-card {
     padding: 20px;
+  }
+  @media (max-width: 480px) {
+  .hero-message {
+    padding-top: 110px;
   }
 }
